files-view: pass proper type of file to validate_file_name

validate_file_name was called inconditionnaly with is_folder=TRUE, so
the variable error_message didn't have the correct message for standard
files.

When calling validate_file_name, we now pass the boolean
FileNameWidgetData->target_is_folder which inform if the validation is
for a file or a directory.

https://bugzilla.gnome.org/show_bug.cgi?id=754616